add autoloader for classes

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <body>
     <div class="wrapper">
         <div class="text">
-            <span class="name">Template</span>
-            <span class="domain">.de</span>
+            <a href="src/parseHtml.php" target="_self">Start scanning directory</a>
         </div>
     </div>
 </body>
