add first update step

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <div class="text">
             <a href="src/parseHtml.php" target="_self">Start scanning directory</a>
         </div>
+        <div class="text">
+            <a href="src/update.php" target="_self">Update</a>
+        </div>
     </div>
 </body>
 </html>
